# crunchy

./: .gitignore  Cargo.toml  README.md  flake.nix
.github/workflows/: check-and-lint.yml
doc/: ips.md
src/: config.rs  constants.rs  geoip_cache.rs  graph_utils.rs  histogram.rs  ips.rs  main.rs  nodes.rs  normalization.rs  peer.rs  utils.rs
src/ips/: algorithm.rs  config.rs  graph_utils.rs  ips_algorithm.rs  mod.rs  normalization.rs  peer.rs  statistics.rs
testdata/: config.toml  geoip-cache.json  ips-peers-sample-output.json  sample.json  vanilla-peers.json  visualize.py
