[package]
name = "ziggurat-crunchy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
spectre = "0.5.2"
ziggurat-core-geoip = { git = "https://github.com/asmie/ziggurat-core", rev = "e82f6ed" }

[dependencies.tokio]
version = "1.24"
features = ["full"]