[package]
name = "ziggurat-crunchy"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

description = "P2P network crawler data cruncher for graph metrics"
readme = "Readme.md"

[dependencies]
anyhow = "1.0"
clap = { version = "4.0.29", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
spectre = "0.5.2"
toml = "0.7.0"
ziggurat-core-crawler = { git = "https://github.com/runziggurat/ziggurat-core", rev = "05dd9f0" }
ziggurat-core-geoip = { git = "https://github.com/runziggurat/ziggurat-core", rev = "05dd9f0" }

[dependencies.tokio]
version = "1.24"
features = ["full"]

